--- a/components/adder/Cargo.toml
+++ b/components/adder/Cargo.toml
@@ -4,27 +4,19 @@ version = "1.0.0"
 edition = "2021"
 authors = ["WasmFlow Example"]
 
+[workspace]
+# This is a standalone crate, not part of the parent workspace
+
 [lib]
 crate-type = ["cdylib"]
 
-# Configure cargo-component to use wasm32-wasip2
-[package.metadata.component]
-package = "wasmflow:node"
-
-[package.metadata.component.target]
-path = "wit"
-
 [dependencies]
-# Component model bindings
-cargo-component-bindings = "0.6"
-wit-bindgen-rt = "0.44"
+wit-bindgen = "0.30"
+
+[build-dependencies]
+wit-component = "0.215"
 
 [profile.release]
 opt-level = "s"  # Optimize for size
 lto = true
 strip = true
-
-[package.metadata.component.bindings]
-
-[workspace]
-# This is an independent component, not part of the main workspace
