--- a/components/adder/Justfile
+++ b/components/adder/Justfile
@@ -13,10 +13,10 @@ build: clean
 
 # Install the component to WasmFlow components directory
 install: build
-    @echo "Installing component to ../../components/"
-    mkdir -p ../../components
+    @echo "Installing component to ../bin/"
+    mkdir -p ../bin
     cp target/wasm32-wasip2/release/{{component_name}}.wasm \
-       ../../components/{{component_name}}.wasm
+       ../bin/{{component_name}}.wasm
     @echo "✓ Component installed"
 
 # Clean build artifacts
