fix: updates to naming and justfiles for other categories

--- a/components/.templates/Cargo.toml
+++ b/components/.templates/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "example-COMPONENT-NAME"  # Replace with actual name
+name = "COMPONENT-NAME"  # Replace with actual name
 version = "1.0.0"
 edition = "2021"
 
